force-app/main/default/objects/Classification_Assign__c/Classification_Assign__c.object-meta.xml
<CustomObject>
    <description>Assignment of a single classification to a proposal</description>
    <label>Classification Assign</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Classification Assign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classification Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>