force-app/main/default/objects/Classification_Assign__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>The classification assigned to the proposal</description>
    <inlineHelpText>The classification assigned to the proposal</inlineHelpText>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Classification Assigns</relationshipLabel>
    <relationshipName>Classification_Assigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>