force-app/main/default/objects/Classification_Assign__c/fields/Classification_category__c.field-meta.xml
<CustomField>
    <fullName>Classification_category__c</fullName>
    <description>The category of the linked classification</description>
    <formula>Classification__r.Classification_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The category of the linked classification</inlineHelpText>
    <label>Classification category</label>
    <type>Text</type>
</CustomField>