force-app/main/default/objects/Classification_Assign__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <description>The proposal to which the classification is assigned</description>
    <inlineHelpText>The proposal to which the classification is assigned</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Classification Assigns</relationshipLabel>
    <relationshipName>Classification_Assigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>