force-app/main/default/objects/Classification_Assign__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>The rank (or primacy) of this classification for this proposal.  1 is considered highest.</description>
    <inlineHelpText>The rank (or primacy) of this classification for this proposal.  1 is considered highest.</inlineHelpText>
    <label>Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>